--- a/style.css
+++ b/style.css
@@ -119,18 +119,19 @@ main > img {
     background-color: none;
   }
   main {
-    margin-top: 0%;
-    padding: 0;
+    margin: 0;
     border-radius: 0;
     width: 400px;
     justify-self: center;
+    padding: 0;
   }
   main > img {
     border-radius: 0%;
     width: 400px;
   }
   article {
-    padding: 1em;
+    padding: 2rem;
+    
   }
   .Preparation-time {
     background-color: hsl(330, 100%, 96%);
