--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
   margin: 0;
   padding: 0%;
   background-color: hsl(30, 54%, 90%);
+  display: flex;
+   height: 100svh;
+  flex-direction: column;
+  align-items: center;
+ 
 }
 
 main {
@@ -19,14 +24,15 @@ main {
   padding: 2em;
   border-radius: 2em;
   width: 45vw;
-  justify-self: center;
+ 
 }
 
 main > img {
-  height: 45vh;
-  width: 45vw;
+  height: 45svh;
+  width: 100%;
   border-radius: 1em;
 }
+
 
 .Preparation-time {
   background-color: hsl(330, 100%, 96%);
@@ -84,7 +90,7 @@ main > img {
 
 .Instructions ol > li {
   padding: 0.4em;
-  line-height: 1.3em;
+  line-height: 1.3;
 }
 
 .Instructions ol > li span {
@@ -115,24 +121,22 @@ main > img {
 }
 
 @media (max-width: 768px) {
-  body {
-    background-color: none;
-  }
+
   main {
     margin: 0;
     border-radius: 0;
     width: 400px;
-    justify-self: center;
     padding: 0;
   }
   main > img {
-    border-radius: 0%;
-    width: 400px;
+    border-radius: 0;
+    width: 100%;
   }
   article {
     padding: 2rem;
     
   }
+  
   .Preparation-time {
     background-color: hsl(330, 100%, 96%);
     padding: 0.8em;
