--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+img{
+  display: block;
+  width: 100%;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -8,53 +18,48 @@
 }
 
 body {
-  margin: 0;
-  padding: 0%;
   background-color: hsl(30, 54%, 90%);
   display: flex;
-   height: 100svh;
   flex-direction: column;
   align-items: center;
- 
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: hsl(330, 100%, 98%);
-  margin-top: 2em;
-  padding: 2em;
-  border-radius: 2em;
-  width: 45vw;
- 
-}
-
-main > img {
-  height: 45svh;
   width: 100%;
-  border-radius: 1em;
+  max-width: 40em;
+}
+p{
+  line-height: 1.5;
+  padding-top: 1em;
 }
 
-
+article{
+  padding: 2em;
+}
 .Preparation-time {
   background-color: hsl(330, 100%, 96%);
-  padding: 0.8em;
+  padding: 1em;
   margin-top: 1.5em;
   margin-bottom: 1.5em;
-  border-radius: 0.8em;
-  height: 25vh;
+  border-radius: 0.5em;
+  width: 100%;
+  
 }
 .Preparation-time h3 {
   color: hsl(332, 51%, 32%);
-  margin-left: 0.5em;
+ margin-left: 0.5em;
 }
 .Preparation-time ul {
   padding-left: 1.5em;
-  height: 10vh;
+  
 }
-.Preparation-time ul span {
-  font-weight: bolder;
-}
+
 .Preparation-time li {
-  padding: 0.2em;
+ line-height: 1.5;
 }
 .Preparation-time li::marker {
   color: hsl(332, 51%, 32%);
@@ -63,7 +68,10 @@ main > img {
 .Ingredients h2 {
   color: hsl(332, 51%, 32%);
 }
+.Ingredients {
+  margin-bottom: 1em;
 
+}
 .Ingredients li {
   padding: 0.3em;
 }
@@ -75,13 +83,19 @@ main > img {
 .Ingredients li::marker {
   color: hsl(332, 51%, 32%);
 }
+/* instruction styling */
+.Instructions{
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
 
 .Instructions h2 {
   color: hsl(332, 51%, 32%);
+  padding-bottom: 0.7em;
 }
 
 .Instructions ol {
-  padding-left: 1.5em;
+ padding-left: 1.5em;
 }
 
 .Instructions ol > li::marker {
@@ -89,19 +103,23 @@ main > img {
 }
 
 .Instructions ol > li {
-  padding: 0.4em;
-  line-height: 1.3;
+ /* padding: 0.4em;*/
+  line-height: 1.5em;
 }
 
 .Instructions ol > li span {
   font-weight: bolder;
 }
 
-.Nutrition-table h3 {
+.nutrition-section{
+  margin-top: 1em;
+}
+.nutrition-section h3 {
   color: hsl(332, 51%, 32%);
+  padding-bottom: 1em;
 }
 
-#nutrition-table {
+.nutrition-table {
   margin-top: 1em;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -120,32 +138,18 @@ main > img {
   border-bottom: 1px solid black;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 780px) {
+  body {
+    background-color: none;
+  }
+main{
+  border-radius: 1.5em;
+  margin-top: 2em;
+ padding: 1.5em;
+}
+img{
+  border-radius: 1.5em;
+}
 
-  main {
-    margin: 0;
-    border-radius: 0;
-    width: 400px;
-    padding: 0;
-  }
-  main > img {
-    border-radius: 0;
-    width: 100%;
-  }
-  article {
-    padding: 2rem;
-    
-  }
   
-  .Preparation-time {
-    background-color: hsl(330, 100%, 96%);
-    padding: 0.8em;
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-    border-radius: 0.8em;
-    height: auto;
-  }
-  .Preparation-time li {
-    padding: 0.3em;
-  }
 }/*# sourceMappingURL=style.css.map */
