--- a/style.css
+++ b/style.css
@@ -25,9 +25,6 @@ body {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: hsl(330, 100%, 98%);
   width: 100%;
   max-width: 40em;
@@ -42,7 +39,7 @@ article{
 }
 .Preparation-time {
   background-color: hsl(330, 100%, 96%);
-  padding: 1em;
+  padding: 0.8em;
   margin-top: 1.5em;
   margin-bottom: 1.5em;
   border-radius: 0.5em;
@@ -59,7 +56,7 @@ article{
 }
 
 .Preparation-time li {
- line-height: 1.5;
+  padding: 0.2em;
 }
 .Preparation-time li::marker {
   color: hsl(332, 51%, 32%);
@@ -68,10 +65,7 @@ article{
 .Ingredients h2 {
   color: hsl(332, 51%, 32%);
 }
-.Ingredients {
-  margin-bottom: 1em;
 
-}
 .Ingredients li {
   padding: 0.3em;
 }
@@ -83,19 +77,13 @@ article{
 .Ingredients li::marker {
   color: hsl(332, 51%, 32%);
 }
-/* instruction styling */
-.Instructions{
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
 
 .Instructions h2 {
   color: hsl(332, 51%, 32%);
-  padding-bottom: 0.7em;
 }
 
 .Instructions ol {
- padding-left: 1.5em;
+  padding-left: 1.5em;
 }
 
 .Instructions ol > li::marker {
@@ -103,13 +91,10 @@ article{
 }
 
 .Instructions ol > li {
- /* padding: 0.4em;*/
-  line-height: 1.5em;
+  padding: 0.4em;
+  line-height: 1.3em;
 }
 
-.Instructions ol > li span {
-  font-weight: bolder;
-}
 
 .nutrition-section{
   margin-top: 1em;
@@ -127,13 +112,13 @@ article{
   line-height: 1.5em;
 }
 
-#nutrition-table .right {
+.nutrition-table .right {
   color: hsl(332, 51%, 32%);
   font-weight: bold;
   border-bottom: 1px solid black;
 }
 
-#nutrition-table .left {
+.nutrition-table .left {
   font-weight: bold;
   border-bottom: 1px solid black;
 }
